<resources>
    <string name="app_name">APILinkUs</string>
    <string name="action_settings">Settings</string>
    <string name="textUsername">Username:</string>
    <string name="textPassword">Password</string>
    <string name="textLoginTitle">LinkUs</string>
    <string name="textRegistrationTitle">Registration</string>
    <string name="textRemember">Remember me</string>
    <string name="textConfirmPassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="textLastname">Last Name</string>
    <string name="textFirstname">First Name</string>
    <string name="textEmail">Email</string>
    <string name="textSexe">Sexe:</string>
    <string name="textMale">Male</string>
    <string name="textFemale">Female</string>
    <string name="textDateofBirth">Date of birth:</string>
    <string name="textSignup">Register !</string>
    <string name="textChangeIP"> Change IP - ex: http://192.168.0.24:9999</string>
    <string name="textAccessBase"> Test the application !</string>
    <string name="textWelcomeText"> You are connected !</string>
    <string name="textSignin">Sign in</string>
    <string name="textTitleRegistration">Linkus-up</string>
    <string name="profileintrotext">Profile:</string>
    <string name="facebook_app_id">355532101482697</string>
    <string name="action_comment">Leave a comment</string>
    <string name="action_share_friends_only">Partager avec amis </string>
    <string name="action_share_gpfriends_only">Partager avec groupes d amis </string>
    <string name="lblCount">Label Count</string>
    <string name="lblProfile">Profile</string>
    <string name="lblMoment">Moment</string>
    <string name="tv_friends">0</string>
    <string name="tv_posts">0</string>
    <string name="moment_title">Title:</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_recents">Recents</string>
    <string name="text_notifications">Notifications</string>
    <string name="user_model_name">SAUL Molinero</string>
    <string name="user_model_mail">mosaul@outlook.com</string>
    <string name="user_actual_location">Paris, FRANCE</string>
    <string name="post_sent_time">1hr ago</string>
    <string name="album_name">Trip to India</string>
    <string name="moment_name">Visit to Taj Mahal Palace with my family</string>
    <string name="likes">Likes</string>
    <string name="comments">Coms</string>
    <string name="shares">Shares</string>
    <!-- Sliding menu using navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_accueil">Accueil</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_proches">Proches</string>
    <string name="nav_invitations">Invitations</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_parametres">Paramètres</string>
    <string name="nav_about_us">A propos de Linkus</string>
    <string name="nav_logout">Se deconnecter</string>
    <string name="nav_privacy_policy">Politique de confidentialité</string>
    <!--  Settings tabs -->
    <string name="profile_title">PROFIL</string>
    <string name="subscription_title">SUBSCRIPTION PACKAGES</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="social_title">SOCIAL</string>
    <string name="support_title">SUPPORT</string>
    <!-- Subscription packages -->
    <string name="sub_package_friend_one">Abonnement Friends - 1 an</string>
    <string name="sub_package_friend_two">Abonnement Friends - 6 mois</string>
    <string name="sub_package_description_one">Abonnement Description - 1 an</string>
    <string name="sub_package_description_two">Abonnement Description - 6 mois</string>
    <string name="remaining_friends_request">Nombre restant d invitations amis:</string>
    <string name="remaining_description_request">Nombre restant de descriptions:</string>
    <!-- Notifications -->
    <string name="text_notification">Activiter les notifications</string>
    <!-- SOCIAL -->
    <string name="facebook_title">Facebook</string>
    <string name="twitter_title">Twitter</string>
    <string name="google_title">Google+</string>
    <!-- SUPPORT -->
    <string name="report_a_problem_title">Signaler un problème</string>
    <string name="privacy_policy_title">Politique de confidentialité</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Accueil</item>
        <item>Profile</item>
        <item>Proches</item>
        <item>Invitations</item>
        <item>Notifications</item>
        <item>Paramètres</item>
        <item>A propos de Linkus</item>
        <item>Se deconnecter</item>
    </string-array>

    <string name="activity_title_about_us">A propos de Linkus</string>
    <string name="activity_title_privacy_policy">Politique de confidentialité</string>
    <string name="action_clear_all">Effacer tout</string>
    <string name="action_logout">Se deconnecter</string>
    <string name="action_mark_all_read">Marquer comme lus</string>
    <string name="privacy_policy">Politque de confidentialité</string>
    <string name="title_activity_test">test</string>

    <string name="menu_simple"> Menu simple </string>

    <!-- CIRCLE -->
    <string name="invite_friend">Ajouter</string>
    <string name="moment_description">Description du moment</string>
    <string name="remove_friend">Supprimer</string>
    <string name="add_friend">Ajouter</string>
    <string name="pending_friend">Invitation envoyée</string>
    <string name="create_group">Créé un groupe</string>
    <string name="remove_group_friend">Supprimer</string>
    <string name="edit_group_friend">Editer</string>

    <!-- Upload moment -->
    <string name="upload_moment_button">Upload</string>
    
    <string name="filter_prompt">Filtrer</string>
    <string-array name="rigths_arrays">
        <item>Par droit de lecture</item>
        <item>Par droit de commentaire</item>
        <item>Par droit d écriture</item>
    </string-array>

  <string name="album_name_textfield">Name:</string>
  <string name="album_place_name_textfield">Place Name:</string>
  <string name="album_country_name_textfield">Country Name:</string>
    <string name="submit_button_title">Submit</string>
</resources>
