<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_accueil" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_relatives"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_proches" />
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/ic_account_plus_black_24dp"
            android:title="@string/nav_invitations" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_parametres" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout"/>
        </menu>
    </item>

</menu>