<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >

    <TextView
        android:id="@+id/welcomeText"
        android:text="@string/textWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/registrationButton"
        android:text="@string/textAccessBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/tw__tweet_dark_container_bg_color"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/profileView"
        android:text="@string/profileintrotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>