<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/textRegistrationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/titleView"
                android:textColor="@color/red"
                android:layout_marginTop="16dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/textLastname"
                android:id="@+id/lneditText"
                android:textColor="@color/dark_grey" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/textFirstname"
                android:layout_marginTop="15dp"
                android:id="@+id/fneditText"
                android:textColor="@color/dark_grey" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:id="@+id/emaileditText"
                android:hint="@string/textEmail"
                android:textSize="16sp"
                android:textColor="@color/dark_grey" />

            <!-- Password  Zone -->
            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:hint="@string/textPassword"
                android:textSize="16sp"
                android:textColor="@color/dark_grey"/>

            <EditText

                android:id="@+id/registration_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                android:hint="@string/textConfirmPassword" />


                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioSex"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:text="@string/textMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/maleCheckBox"
                        android:checked="true" />

                    <RadioButton
                        android:text="@string/textFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:buttonTint="@color/white"
                        android:id="@+id/femaleCheckBox"/>
                </RadioGroup>


            <Button
                android:text="Birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/dark_grey"
                android:textColor="@color/white"
                android:id="@+id/selectDOB" />

            <Button
                android:text="@string/textSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/signupbtn"
                android:background="@color/red"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textAllCaps="false" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>