<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="vertical">
    <TextView
        android:text="@string/textLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/titleView"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:layout_marginTop="16dp" />
    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:hint="@string/textEmail"
        android:layout_gravity="center_horizontal"
        android:id="@+id/emailLogin"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:inputType="textPassword"
        android:hint="@string/textPassword"
        android:id="@+id/passwordLogin"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_marginTop="19dp" />

    <CheckBox
        android:text="@string/textRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:layout_marginTop="16dp"/>
    <Button
        android:text="@string/textSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/submitButton"
        android:background="@color/red"
        android:textColor="@android:color/white"/>

    <Button
        android:text="@string/textSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/registrationButton"
        android:background="@color/tw__tweet_dark_container_bg_color"
        android:textColor="@android:color/white"
        />


    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        tools:context="com.start_up.dev.apilinkus.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp" />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:context="com.start_up.dev.apilinkus.AlbumActivity">

                    <android.support.design.widget.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/change_ip_button"
                        android:background="@drawable/link"
                        android:textColor="@android:color/white"
                        app:srcCompat="@android:drawable/ic_menu_send" />

                </android.support.design.widget.CoordinatorLayout>
                <EditText
                    android:inputType="textEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:hint="@string/textChangeIP"
                    android:layout_gravity="center"
                    android:id="@+id/change_ip"
                    android:fontFamily="sans-serif"
                    android:textSize="10sp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>